@@ -273,7 +273,7 @@ class ComboBoxSample
 	  Note that <paramref name="cell"/> has already to be packed
 	  into the combo box for this to function properly.
 	</remarks>
-      </Docs>
+      </Docs>i
     </Member>
     <Member MemberName="PackEnd">
       <MemberSignature Language="C#" Value="public virtual void PackEnd (Gtk.CellRenderer cell, bool expand);" />
@@ -286,7 +286,7 @@ class ComboBoxSample
         <Parameter Name="expand" Type="System.Boolean" />
       </Parameters>
       <Docs>
-        <summary></summary>
+        <summary>Adds the @cell to the end of the combo box.</summary>
         <param name="cell">a <see cref="T:Gtk.CellRenderer" /></param>
         <param name="expand">a <see cref="T:System.Boolean" /></param>
         <remarks>
@@ -308,10 +308,14 @@ class ComboBoxSample
         <Parameter Name="expand" Type="System.Boolean" />
       </Parameters>
       <Docs>
-        <summary>Adds the <paramref name="cell"/> to the end of the combo box.</summary>
+        <summary>Packs the <paramref name="cell"/> into the beginning of the combo box.</summary>
         <param name="cell">a <see cref="T:Gtk.CellRenderer" /></param>
         <param name="expand">a <see cref="T:System.Boolean" /></param>
-        <remarks></remarks>
+        <remarks>
+	  If <paramref name="expand"/> is <see langword="false"/>, then the
+	  <paramref name="cell"/> is allocated no more space than it needs. Any unused space is
+	  divided evenly between cells for which <paramref name="expand"/> is <see langword="true"/>.
+	</remarks>
       </Docs>
     </Member>
     <Member MemberName="AddAttribute">
@@ -562,8 +566,6 @@ Default value: 0
       </Parameters>
       <Docs>
         <summary>Sets a data function to use for the combo box.</summary>
-        <param name="renderer">a <see cref="T:Gtk.CellRenderer" /></param>
-        <param name="func">a <see cref="T:Gtk.CellLayoutDataFunc" /></param>
         <param name="cell">a <see cref="T:Gtk.CellRenderer" /></param>
         <param name="func">a <see cref="T:Gtk.CellLayoutDataFunc" /></param>
         <param name="func_data">a <see cref="T:System.IntPtr" /></param>
