@@ -621,7 +621,7 @@
         <param name="marshal">a <see cref="T:Gtk.CallbackMarshal" /></param>
         <param name="callback_data">a <see cref="T:System.IntPtr" /></param>
         <param name="notify">a <see cref="T:Gtk.DestroyNotify" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Item">
