@@ -526,10 +526,12 @@
         <Parameter Name="widget" Type="Gtk.Widget" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>
+	  Gets the list of targets this widget can provide for drag-and-drop.
+	</summary>
         <param name="widget">a <see cref="T:Gtk.Widget" /></param>
-        <returns>a <see cref="T:Gtk.TargetList" /></returns>
-        <remarks>To be added</remarks>
+        <returns>a <see cref="T:Gtk.TargetList" />, or <see langword="null"/> if none.</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="SourceSetTargetList">
@@ -543,10 +545,14 @@
         <Parameter Name="target_list" Type="Gtk.TargetList" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>
+	  Changes the target types that this widget offers for drag-and-drop.
+	  The widget must first be made into a drag source with
+	  gtk_drag_source_set().
+	</summary>
         <param name="widget">a <see cref="T:Gtk.Widget" /></param>
         <param name="target_list">a <see cref="T:Gtk.TargetList" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="SetDefaultIcon">
@@ -563,13 +569,18 @@
         <Parameter Name="hot_y" Type="System.Int32" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Obsolete.</summary>
         <param name="colormap">a <see cref="T:Gdk.Colormap" /></param>
         <param name="pixmap">a <see cref="T:Gdk.Pixmap" /></param>
         <param name="mask">a <see cref="T:Gdk.Pixmap" /></param>
         <param name="hot_x">a <see cref="T:System.Int32" /></param>
         <param name="hot_y">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks>
+	  Old functionality: changes the default drag icon. GTK+ retains references for the
+	  arguments, and will release them when they are no longer needed.
+	  This function is obsolete. The default icon should now be changed
+	  via the stock system by changing the stock pixbuf for #GTK_STOCK_DND.
+	</remarks>
       </Docs>
     </Member>
   </Members>
