@@ -10,7 +10,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Object</BaseTypeName>
@@ -44,7 +44,7 @@
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Diamond">
@@ -73,7 +73,7 @@
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="BoxGap">
@@ -108,7 +108,7 @@
         <param name="gap_side">a <see cref="T:System.Int32" /></param>
         <param name="gap_x">a <see cref="T:System.Int32" /></param>
         <param name="gap_width">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Extension">
@@ -139,7 +139,7 @@
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
         <param name="gap_side">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Expander">
@@ -164,7 +164,7 @@
         <param name="x">a <see cref="T:System.Int32" /></param>
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="expander_style">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Focus">
@@ -189,7 +189,7 @@
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Arrow">
@@ -222,7 +222,7 @@
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Tab">
@@ -251,7 +251,7 @@
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Box">
@@ -280,7 +280,7 @@
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Layout">
@@ -307,7 +307,7 @@
         <param name="x">a <see cref="T:System.Int32" /></param>
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="layout">a <see cref="T:Pango.Layout" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Hline">
@@ -332,7 +332,7 @@
         <param name="x1">a <see cref="T:System.Int32" /></param>
         <param name="x2">a <see cref="T:System.Int32" /></param>
         <param name="y">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Option">
@@ -361,7 +361,7 @@
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="ResizeGrip">
@@ -390,7 +390,7 @@
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="FlatBox">
@@ -419,7 +419,7 @@
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="String">
@@ -444,7 +444,7 @@
         <param name="x">a <see cref="T:System.Int32" /></param>
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="str1ng">a <see cref="T:System.String" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Handle">
@@ -475,7 +475,7 @@
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
         <param name="orientation">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="ShadowGap">
@@ -510,7 +510,7 @@
         <param name="gap_side">a <see cref="T:System.Int32" /></param>
         <param name="gap_x">a <see cref="T:System.Int32" /></param>
         <param name="gap_width">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Check">
@@ -539,7 +539,7 @@
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Polygon">
@@ -566,7 +566,7 @@
         <param name="points">a <see cref="T:Gdk.Point" /></param>
         <param name="npoints">a <see cref="T:System.Int32" /></param>
         <param name="fill">a <see cref="T:System.Boolean" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Vline">
@@ -591,7 +591,7 @@
         <param name="y1_">a <see cref="T:System.Int32" /></param>
         <param name="y2_">a <see cref="T:System.Int32" /></param>
         <param name="x">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Slider">
@@ -622,7 +622,7 @@
         <param name="width">a <see cref="T:System.Int32" /></param>
         <param name="height">a <see cref="T:System.Int32" /></param>
         <param name="orientation">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="InsertionCursor">
@@ -649,7 +649,7 @@
         <param name="is_primary">a <see cref="T:System.Boolean" /></param>
         <param name="direction">a <see cref="T:System.Int32" /></param>
         <param name="draw_arrow">a <see cref="T:System.Boolean" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -660,7 +660,7 @@
       <Docs>
         <summary>To be added</summary>
         <returns>a <see cref="T:Gtk.Draw" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
