@@ -1,5 +1,16 @@
 2005-01-02  Shane Landrum  <epicene@pobox.com>
 
+	* en/Gtk/ComboBox.xml: Doc edits.
+	* en/Gtk/ContainerChild.xml
+	* en/Gtk/Drag.xml
+	* en/Gtk/Draw.xml
+	* en/Gtk/CellViewMenuItem.xml
+	* en/Gtk/DisconnectProxyArgs.xml
+	* en/Gtk/CellView.xml
+	* en/Gtk/Container.xml: added docs.
+
+2005-01-02  Shane Landrum  <epicene@pobox.com>
+
 	* en/Gtk/ComboBox.xml
 	* en/Gtk/CellViewMenuItem.xml
 	* en/Gtk/CellView.xml
